# AI_Shell-llama

./: CMakeLists.txt  README.md  note
ai_shell/: 5302026.txt  CMakeListsold.txt  DDG stuff.txt  ReadmeNotes..txt  ai_shell.sln  ai_shell.vcxproj  ai_shell.vcxproj.filters  engine_llama.c  html.html  llama.cpps official GGUF-model loader.txt  nonoCMakeLists.txt
ai_shell/Dll/: exports.txt  ggml-base.exp  ggml-cpu.exp  ggml-cpu.lib  ggml.exp  ggml.lib  llama.exp  llama.lib
ai_shell/ai_shell/: ai_shell.c
ai_shell/core/: plugin.c
ai_shell/engine/: engine.c  engine.h  engine_kv.c  engine_kv.h
ai_shell/include/: plugin.h
ai_shell/loader/: gguf_loader.c
ai_shell/main/: ai_shell.c
ai_shell/plugins/: ddg.c  summarize_file.c  websearch.c
ai_shell/server/: chat.html  chat2.html  chat_work.html  http_server.c  http_server.h  summarize_file_html.c
ai_shell/vmm/: vmm.c  vmm.h
ai_shell/x64/Debug/: ai_shell.exp  ai_shell.lib  ggml-base.lib  vc143.idb
ai_shell/x64/Debug/ai_shell.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ai_shell.lastbuildstate
ai_shell/x64/Release/ai_shell.tlog/: ai_shell.lastbuildstate
engine/: engine.c  engine.h  engine_kv.c
main/: ai_shell.c
plugins/: summarize_file.c  websearch.c
server/: summarize_file_html.c
